Projeto implementado e rodando, mas ainda não finzalizado

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version> <!-- Use uma versão recente -->
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
